// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders with different Colours 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <span
    className="sc-gZVZiL fpBsZV"
  >
    Xsmall
  </span>
  <span
    className="sc-gZVZiL furDjH"
    color="piccolo.100"
  >
    Xsmall
  </span>
  <span
    className="sc-gZVZiL jhbAOC"
    color="goten.100"
  >
    Xsmall
  </span>
</div>
`;

exports[`Label renders with different Icons 1`] = `
<div
  className="flex flex-col justify-around items-center w-full"
>
  <div
    className="flex justify-around items-center w-full mb-4"
  >
    <span
      className="sc-gZVZiL gAkZGi"
      size="twoxsmall"
    >
      <span
        className="sc-cMOycp dMMImK"
        size="twoxsmall"
      >
        <svg
          className="sc-iqGgem"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Twoxsmall
    </span>
    <span
      className="sc-gZVZiL VNQxm"
      size="twoxsmall"
    >
      Twoxsmall
      <span
        className="sc-kjMGqw joefLP"
        size="twoxsmall"
      >
        <svg
          className="sc-jgbSNz"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
      className="sc-gZVZiL dJVdGA"
      size="twoxsmall"
    >
      <span
        className="sc-cMOycp dMMImK"
        size="twoxsmall"
      >
        <svg
          className="sc-iqGgem"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Twoxsmall
      <span
        className="sc-kjMGqw joefLP"
        size="twoxsmall"
      >
        <svg
          className="sc-jgbSNz"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="flex justify-around items-center w-full"
  >
    <span
      className="sc-gZVZiL leFFUX"
    >
      <span
        className="sc-cMOycp fnUQQX"
      >
        <svg
          className="sc-iqGgem"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Xsmall
    </span>
    <span
      className="sc-gZVZiL eGiHEr"
    >
      Xsmall
      <span
        className="sc-kjMGqw bJtpBK"
      >
        <svg
          className="sc-jgbSNz"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
      className="sc-gZVZiL biOeAJ"
    >
      <span
        className="sc-cMOycp fnUQQX"
      >
        <svg
          className="sc-iqGgem"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Xsmall
      <span
        className="sc-kjMGqw bJtpBK"
      >
        <svg
          className="sc-jgbSNz"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`Label renders with different LetterCases 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <span
    className="sc-gZVZiL fpBsZV"
  >
    Default
  </span>
  <span
    className="sc-gZVZiL krBxC"
  >
    Lowercase
  </span>
</div>
`;

exports[`Label renders with different Sizes 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <span
    className="sc-gZVZiL gtUPRE"
    size="twoxsmall"
  >
    Twoxsmall
  </span>
  <span
    className="sc-gZVZiL fpBsZV"
  >
    Xsmall
  </span>
  <span
    className="sc-gZVZiL kPMzDx"
    size="twoxsmall"
  >
    Twoxsmall
  </span>
  <span
    className="sc-gZVZiL krBxC"
  >
    Xsmall
  </span>
</div>
`;
